--- a/SchoolSystem.Core/_SharedResources/SharedResources.Ar.resx
+++ b/SchoolSystem.Core/_SharedResources/SharedResources.Ar.resx
@@ -129,6 +129,9 @@
   <data name="Deleted" xml:space="preserve">
     <value>تم الحذف بنجاح</value>
   </data>
+  <data name="EmailAlreadyExist" xml:space="preserve">
+    <value>الايميل موجود بالفعل</value>
+  </data>
   <data name="Name" xml:space="preserve">
     <value>الاسم</value>
   </data>
@@ -137,6 +140,9 @@
   </data>
   <data name="NotFound" xml:space="preserve">
     <value>غير متوفر</value>
+  </data>
+  <data name="PhoneAlreadyExist" xml:space="preserve">
+    <value>رقم الهاتف موجود بالفعل</value>
   </data>
   <data name="Required" xml:space="preserve">
     <value>هذا الحقل مطلوب</value>
