--- a/SchoolSystem.Core/_SharedResources/SharedResources.En.resx
+++ b/SchoolSystem.Core/_SharedResources/SharedResources.En.resx
@@ -129,6 +129,9 @@
   <data name="Deleted" xml:space="preserve">
     <value>Deleted Successfully</value>
   </data>
+  <data name="EmailAlreadyExist" xml:space="preserve">
+    <value>Email is Already Exist</value>
+  </data>
   <data name="Name" xml:space="preserve">
     <value>Name</value>
   </data>
@@ -137,6 +140,9 @@
   </data>
   <data name="NotFound" xml:space="preserve">
     <value>Not Found</value>
+  </data>
+  <data name="PhoneAlreadyExist" xml:space="preserve">
+    <value>Phone is Already Exist</value>
   </data>
   <data name="Required" xml:space="preserve">
     <value>This Field is Required</value>
