Enhance authentication and API documentation
- Updated `StudentController` to enforce authorization for accessing student lists.
- Added Swagger configuration in `IdentityExtension` for improved API documentation and JWT security definitions.
- Added new localization strings for authentication-related feedback in `SharedResources`.
- Created `AuthenticationController` and `AuthenticationCommandHandler` for handling sign-in requests.
- Introduced `SignInCommand` class for encapsulating sign-in data.
- Created `JwtSettings` class for centralized JWT configuration management.
- Enhanced `Status` class with new codes for clearer authentication result communication.

--- a/SchoolSystem.Core/_SharedResources/SharedResources.Ar.resx
+++ b/SchoolSystem.Core/_SharedResources/SharedResources.Ar.resx
@@ -132,6 +132,18 @@
   <data name="EmailAlreadyExist" xml:space="preserve">
     <value>الايميل موجود بالفعل</value>
   </data>
+  <data name="EmailNotConfirmed" xml:space="preserve">
+    <value>الايميل لم يتم تفعيله</value>
+  </data>
+  <data name="EmailNotFound" xml:space="preserve">
+    <value>الايميل غير موجود</value>
+  </data>
+  <data name="InvalidPassword" xml:space="preserve">
+    <value>الرقم السرى خطأ</value>
+  </data>
+  <data name="LockedOut" xml:space="preserve">
+    <value>الايميل تم غلقه</value>
+  </data>
   <data name="Name" xml:space="preserve">
     <value>الاسم</value>
   </data>
