--- a/SchoolSystem.Core/_SharedResources/SharedResources.En.resx
+++ b/SchoolSystem.Core/_SharedResources/SharedResources.En.resx
@@ -132,6 +132,18 @@
   <data name="EmailAlreadyExist" xml:space="preserve">
     <value>Email is Already Exist</value>
   </data>
+  <data name="EmailNotConfirmed" xml:space="preserve">
+    <value>Email is Not Confirmed</value>
+  </data>
+  <data name="EmailNotFound" xml:space="preserve">
+    <value>Email is Not Found</value>
+  </data>
+  <data name="InvalidPassword" xml:space="preserve">
+    <value>Invalid Password</value>
+  </data>
+  <data name="LockedOut" xml:space="preserve">
+    <value>Email is Locked Out</value>
+  </data>
   <data name="Name" xml:space="preserve">
     <value>Name</value>
   </data>
