Add role management features and authorization updates
- Updated `DashboardController.cs` to include admin role authorization and new endpoints for role management (Add, Edit, Delete, List).
- Modified `UserCommandHandler.cs` and `AddUserCommand.cs` to include role parameters for user creation.
- Updated project files (`SchoolSystem.APIs.csproj`, `SchoolSystem.Core.csproj`) to include necessary SDKs and new folder structures.
- Added role-related messages to resource files and updated `SharedResourcesKeys.cs`.
- Enhanced routing in `Router.cs` for role management.
- Modified `IAuthService.cs` to include role parameters and registered `IAuthorizationService` in `DependencyInjection.cs`.
- Implemented role assignment logic in `AuthService.cs`.
- Created new classes and interfaces for handling authorization commands and queries related to role management.

--- a/SchoolSystem.Core/_SharedResources/SharedResources.Ar.resx
+++ b/SchoolSystem.Core/_SharedResources/SharedResources.Ar.resx
@@ -159,6 +159,9 @@
   <data name="Required" xml:space="preserve">
     <value>هذا الحقل مطلوب</value>
   </data>
+  <data name="RoleAlreadyExist" xml:space="preserve">
+    <value>اسم الدور الجديد موجود بالفعل</value>
+  </data>
   <data name="Success" xml:space="preserve">
     <value>تمت العملية بنجاح</value>
   </data>
