Add email verification and password reset features
- Updated `AccountController.cs` with new endpoints for sending and verifying email codes, resetting passwords, and confirming email addresses.
- Added `EmailSettings` section in `appsettings.json` for email configuration.
- Enhanced localization files with new strings for email-related messages.
- Modified `SharedResourcesKeys.cs` to include keys for email actions.
- Updated `Router.cs` to define routes for email actions.
- Added properties for email confirmation in `ApplicationUser.cs`.
- Updated `SchoolDbContextModelSnapshot.cs` to reflect new user properties.
- Configured `EmailSettings` and registered `IEmailService` in `DependencyInjection.cs`.
- Included `MailKit` package in `SchoolSystem.Service.csproj` for email functionality.
- Created `EmailsCommandHandler.cs` to handle email-related commands.
- Added command classes for email confirmation and password reset.
- Created `EmailSettings.cs` for email configuration structure.
- Introduced `UserClaimsModel.cs` for user claims representation.
- Created migration files to add email confirmation fields to `AspNetUsers`.
- Developed email handling classes (`EmailDto`, `IEmailService`, `EmailService`) for sending emails.

--- a/SchoolSystem.Core/_SharedResources/SharedResources.Ar.resx
+++ b/SchoolSystem.Core/_SharedResources/SharedResources.Ar.resx
@@ -132,14 +132,26 @@
   <data name="EmailAlreadyExist" xml:space="preserve">
     <value>الايميل موجود بالفعل</value>
   </data>
+  <data name="EmailConfirmed" xml:space="preserve">
+    <value>تم تفعيل الايميل بنجاح</value>
+  </data>
   <data name="EmailNotConfirmed" xml:space="preserve">
     <value>الايميل لم يتم تفعيله</value>
   </data>
   <data name="EmailNotFound" xml:space="preserve">
     <value>الايميل غير موجود</value>
   </data>
+  <data name="EmailNotSent" xml:space="preserve">
+    <value>حدث خطأ ما اثناء ارسال الكود</value>
+  </data>
+  <data name="EmailSent" xml:space="preserve">
+    <value>لقد ارسلنا لك الكود </value>
+  </data>
   <data name="InvalidPassword" xml:space="preserve">
     <value>الرقم السرى خطأ</value>
+  </data>
+  <data name="InvalidResetCode" xml:space="preserve">
+    <value>الكود غير صحيح</value>
   </data>
   <data name="LockedOut" xml:space="preserve">
     <value>الايميل تم غلقه</value>
@@ -158,6 +170,9 @@
   </data>
   <data name="Required" xml:space="preserve">
     <value>هذا الحقل مطلوب</value>
+  </data>
+  <data name="ResetCodeExpired" xml:space="preserve">
+    <value>الكود انتهت صلاحيته</value>
   </data>
   <data name="RoleAlreadyExist" xml:space="preserve">
     <value>اسم الدور الجديد موجود بالفعل</value>
